reference/5.1/Microsoft.PowerShell.Core/About/about_Type_Accelerators.md
---
description: Descreve os aceleradores de tipo disponíveis para classes do .NET Framework
keywords: powershell, cmdlet
Locale: en-US
ms.date: 05/01/2020
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.core/about/about_type_accelerators?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: about_Type_Accelerators
ms.openlocfilehash: 21093f3a649212526c3fc3eb5405e2a7ce6e49f3
ms.sourcegitcommit: f874dc1d4236e06a3df195d179f59e0a7d9f8436
ms.translationtype: MT
ms.contentlocale: pt-BR
ms.lasthandoff: 10/13/2020
ms.locfileid: "93195950"
---
# <a name="about-type-accelerators"></a><span data-ttu-id="cfba7-104">Sobre aceleradores de tipo</span><span class="sxs-lookup"><span data-stu-id="cfba7-104">About Type Accelerators</span></span>

## <a name="short-desription"></a><span data-ttu-id="cfba7-105">DESCRIÇÃO COMPLETA DO CURTO</span><span class="sxs-lookup"><span data-stu-id="cfba7-105">SHORT DESRIPTION</span></span>
<span data-ttu-id="cfba7-106">Descreve os aceleradores de tipo disponíveis para classes do .NET Framework</span><span class="sxs-lookup"><span data-stu-id="cfba7-106">Describes the Type accelerators available for .NET framework classes</span></span>

## <a name="long-description"></a><span data-ttu-id="cfba7-107">DESCRIÇÃO LONGA</span><span class="sxs-lookup"><span data-stu-id="cfba7-107">LONG DESCRIPTION</span></span>

<span data-ttu-id="cfba7-108">Os aceleradores de tipo são aliases para classes do .NET Framework.</span><span class="sxs-lookup"><span data-stu-id="cfba7-108">Type accelerators are aliases for .NET framework classes.</span></span> <span data-ttu-id="cfba7-109">Eles permitem que você acesse classes específicas do .NET Framework sem precisar digitar explicitamente o nome inteiro da classe.</span><span class="sxs-lookup"><span data-stu-id="cfba7-109">They allow you to access specific .NET framework classes without having to explicitly type the entire class name.</span></span> <span data-ttu-id="cfba7-110">Por exemplo, você pode encurtar a classe **AliasAttribute** de `[System.Management.Automation.AliasAttribute]` para `[Alias]` .</span><span class="sxs-lookup"><span data-stu-id="cfba7-110">For example, you can shorten the **AliasAttribute** class from `[System.Management.Automation.AliasAttribute]` to `[Alias]`.</span></span>

> [!NOTE]
> <span data-ttu-id="cfba7-111">Todos os aceleradores de tipo ainda precisam ser encapsulados entre colchetes ( `[]` ).</span><span class="sxs-lookup"><span data-stu-id="cfba7-111">All type accelerators still need to be wrapped in square brackets(`[]`).</span></span>

## <a name="available-type-accelerators"></a><span data-ttu-id="cfba7-112">Aceleradores de tipo disponíveis</span><span class="sxs-lookup"><span data-stu-id="cfba7-112">Available Type Accelerators</span></span>

|        <span data-ttu-id="cfba7-113">Acelerador</span><span class="sxs-lookup"><span data-stu-id="cfba7-113">Accelerator</span></span>          |                           <span data-ttu-id="cfba7-114">Nome Completo da Classe</span><span class="sxs-lookup"><span data-stu-id="cfba7-114">Full Class Name</span></span>                           |
|---------------------------- | ------------------------------------------------------------------- |
|<span data-ttu-id="cfba7-115">editor</span><span class="sxs-lookup"><span data-stu-id="cfba7-115">adsi</span></span>                         | <span data-ttu-id="cfba7-116">System. DirectoryServices. DirectoryEntry</span><span class="sxs-lookup"><span data-stu-id="cfba7-116">System.DirectoryServices.DirectoryEntry</span></span>                             |
|<span data-ttu-id="cfba7-117">adsisearcher</span><span class="sxs-lookup"><span data-stu-id="cfba7-117">adsisearcher</span></span>                 | <span data-ttu-id="cfba7-118">System. DirectoryServices. DirectorySearcher</span><span class="sxs-lookup"><span data-stu-id="cfba7-118">System.DirectoryServices.DirectorySearcher</span></span>                          |
|<span data-ttu-id="cfba7-119">Alias</span><span class="sxs-lookup"><span data-stu-id="cfba7-119">Alias</span></span>                        | <span data-ttu-id="cfba7-120">System. Management. Automation. AliasAttribute</span><span class="sxs-lookup"><span data-stu-id="cfba7-120">System.Management.Automation.AliasAttribute</span></span>                         |
|<span data-ttu-id="cfba7-121">AllowEmptyCollection</span><span class="sxs-lookup"><span data-stu-id="cfba7-121">AllowEmptyCollection</span></span>         | <span data-ttu-id="cfba7-122">System. Management. Automation. AllowEmptyCollectionAttribute</span><span class="sxs-lookup"><span data-stu-id="cfba7-122">System.Management.Automation.AllowEmptyCollectionAttribute</span></span>          |
|<span data-ttu-id="cfba7-123">AllowEmptyString</span><span class="sxs-lookup"><span data-stu-id="cfba7-123">AllowEmptyString</span></span>             | <span data-ttu-id="cfba7-124">System. Management. Automation. AllowEmptyStringAttribute</span><span class="sxs-lookup"><span data-stu-id="cfba7-124">System.Management.Automation.AllowEmptyStringAttribute</span></span>              |
|<span data-ttu-id="cfba7-125">AllowNull</span><span class="sxs-lookup"><span data-stu-id="cfba7-125">AllowNull</span></span>                    | <span data-ttu-id="cfba7-126">System. Management. Automation. AllowNullAttribute</span><span class="sxs-lookup"><span data-stu-id="cfba7-126">System.Management.Automation.AllowNullAttribute</span></span>                     |
|<span data-ttu-id="cfba7-127">ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="cfba7-127">ArgumentCompleter</span></span>            | <span data-ttu-id="cfba7-128">System. Management. Automation. ArgumentCompleterAttribute</span><span class="sxs-lookup"><span data-stu-id="cfba7-128">System.Management.Automation.ArgumentCompleterAttribute</span></span>             |
|<span data-ttu-id="cfba7-129">matriz</span><span class="sxs-lookup"><span data-stu-id="cfba7-129">array</span></span>                        | <span data-ttu-id="cfba7-130">System.Array</span><span class="sxs-lookup"><span data-stu-id="cfba7-130">System.Array</span></span>                                                        |
|<span data-ttu-id="cfba7-131">bigint</span><span class="sxs-lookup"><span data-stu-id="cfba7-131">bigint</span></span>                       | <span data-ttu-id="cfba7-132">System. Numerics. BigInteger</span><span class="sxs-lookup"><span data-stu-id="cfba7-132">System.Numerics.BigInteger</span></span>                                          |
|<span data-ttu-id="cfba7-133">bool</span><span class="sxs-lookup"><span data-stu-id="cfba7-133">bool</span></span>                         | <span data-ttu-id="cfba7-134">System.Boolean</span><span class="sxs-lookup"><span data-stu-id="cfba7-134">System.Boolean</span></span>                                                      |
|<span data-ttu-id="cfba7-135">byte</span><span class="sxs-lookup"><span data-stu-id="cfba7-135">byte</span></span>                         | <span data-ttu-id="cfba7-136">System.Byte</span><span class="sxs-lookup"><span data-stu-id="cfba7-136">System.Byte</span></span>                                                         |
|<span data-ttu-id="cfba7-137">char</span><span class="sxs-lookup"><span data-stu-id="cfba7-137">char</span></span>                         | <span data-ttu-id="cfba7-138">System.Char</span><span class="sxs-lookup"><span data-stu-id="cfba7-138">System.Char</span></span>                                                         |
|<span data-ttu-id="cfba7-139">cimclass</span><span class="sxs-lookup"><span data-stu-id="cfba7-139">cimclass</span></span>                     | <span data-ttu-id="cfba7-140">Microsoft. Management. Infrastructure. CimClass</span><span class="sxs-lookup"><span data-stu-id="cfba7-140">Microsoft.Management.Infrastructure.CimClass</span></span>                        |
|<span data-ttu-id="cfba7-141">cimconverter</span><span class="sxs-lookup"><span data-stu-id="cfba7-141">cimconverter</span></span>                 | <span data-ttu-id="cfba7-142">Microsoft. Management. Infrastructure. CimConverter</span><span class="sxs-lookup"><span data-stu-id="cfba7-142">Microsoft.Management.Infrastructure.CimConverter</span></span>                    |
|<span data-ttu-id="cfba7-143">ciminstance</span><span class="sxs-lookup"><span data-stu-id="cfba7-143">ciminstance</span></span>                  | <span data-ttu-id="cfba7-144">Microsoft. Management. Infrastructure. CimInstance</span><span class="sxs-lookup"><span data-stu-id="cfba7-144">Microsoft.Management.Infrastructure.CimInstance</span></span>                     |
|<span data-ttu-id="cfba7-145">CimSession</span><span class="sxs-lookup"><span data-stu-id="cfba7-145">CimSession</span></span>                   | <span data-ttu-id="cfba7-146">Microsoft.Management.Infrastructure.CimSession</span><span class="sxs-lookup"><span data-stu-id="cfba7-146">Microsoft.Management.Infrastructure.CimSession</span></span>                      |
|<span data-ttu-id="cfba7-147">CimType</span><span class="sxs-lookup"><span data-stu-id="cfba7-147">cimtype</span></span>                      | <span data-ttu-id="cfba7-148">Microsoft. Management. Infrastructure. CimType</span><span class="sxs-lookup"><span data-stu-id="cfba7-148">Microsoft.Management.Infrastructure.CimType</span></span>                         |
|<span data-ttu-id="cfba7-149">CmdletBinding</span><span class="sxs-lookup"><span data-stu-id="cfba7-149">CmdletBinding</span></span>                | <span data-ttu-id="cfba7-150">System. Management. Automation. CmdletBindingAttribute</span><span class="sxs-lookup"><span data-stu-id="cfba7-150">System.Management.Automation.CmdletBindingAttribute</span></span>                 |
|<span data-ttu-id="cfba7-151">CultureInfo</span><span class="sxs-lookup"><span data-stu-id="cfba7-151">cultureinfo</span></span>                  | <span data-ttu-id="cfba7-152">System. Globalization. CultureInfo</span><span class="sxs-lookup"><span data-stu-id="cfba7-152">System.Globalization.CultureInfo</span></span>                                    |
|<span data-ttu-id="cfba7-153">DATETIME</span><span class="sxs-lookup"><span data-stu-id="cfba7-153">datetime</span></span>                     | <span data-ttu-id="cfba7-154">System.DateTime</span><span class="sxs-lookup"><span data-stu-id="cfba7-154">System.DateTime</span></span>                                                     |
|<span data-ttu-id="cfba7-155">decimal</span><span class="sxs-lookup"><span data-stu-id="cfba7-155">decimal</span></span>                      | <span data-ttu-id="cfba7-156">System.Decimal</span><span class="sxs-lookup"><span data-stu-id="cfba7-156">System.Decimal</span></span>                                                      |
|<span data-ttu-id="cfba7-157">double</span><span class="sxs-lookup"><span data-stu-id="cfba7-157">double</span></span>                       | <span data-ttu-id="cfba7-158">System.Double</span><span class="sxs-lookup"><span data-stu-id="cfba7-158">System.Double</span></span>                                                       |
|<span data-ttu-id="cfba7-159">DscLocalConfigurationManager</span><span class="sxs-lookup"><span data-stu-id="cfba7-159">DscLocalConfigurationManager</span></span> | <span data-ttu-id="cfba7-160">System. Management. Automation. DscLocalConfigurationManagerAttribute</span><span class="sxs-lookup"><span data-stu-id="cfba7-160">System.Management.Automation.DscLocalConfigurationManagerAttribute</span></span>  |
|<span data-ttu-id="cfba7-161">DscProperty</span><span class="sxs-lookup"><span data-stu-id="cfba7-161">DscProperty</span></span>                  | <span data-ttu-id="cfba7-162">System. Management. Automation. DscPropertyAttribute</span><span class="sxs-lookup"><span data-stu-id="cfba7-162">System.Management.Automation.DscPropertyAttribute</span></span>                   |
|<span data-ttu-id="cfba7-163">DscResource</span><span class="sxs-lookup"><span data-stu-id="cfba7-163">DscResource</span></span>                  | <span data-ttu-id="cfba7-164">System. Management. Automation. DscResourceAttribute</span><span class="sxs-lookup"><span data-stu-id="cfba7-164">System.Management.Automation.DscResourceAttribute</span></span>                   |
|<span data-ttu-id="cfba7-165">float</span><span class="sxs-lookup"><span data-stu-id="cfba7-165">float</span></span>                        | <span data-ttu-id="cfba7-166">System.Single</span><span class="sxs-lookup"><span data-stu-id="cfba7-166">System.Single</span></span>                                                       |
|<span data-ttu-id="cfba7-167">guid</span><span class="sxs-lookup"><span data-stu-id="cfba7-167">guid</span></span>                         | <span data-ttu-id="cfba7-168">System.Guid</span><span class="sxs-lookup"><span data-stu-id="cfba7-168">System.Guid</span></span>                                                         |
|<span data-ttu-id="cfba7-169">tabela</span><span class="sxs-lookup"><span data-stu-id="cfba7-169">hashtable</span></span>                    | <span data-ttu-id="cfba7-170">System.Collections.Hashtable</span><span class="sxs-lookup"><span data-stu-id="cfba7-170">System.Collections.Hashtable</span></span>                                        |
|<span data-ttu-id="cfba7-171">initialsessionstate</span><span class="sxs-lookup"><span data-stu-id="cfba7-171">initialsessionstate</span></span>          | <span data-ttu-id="cfba7-172">System.Management.Automation.Runspaces.InitialSessionState</span><span class="sxs-lookup"><span data-stu-id="cfba7-172">System.Management.Automation.Runspaces.InitialSessionState</span></span>          |
|<span data-ttu-id="cfba7-173">INT</span><span class="sxs-lookup"><span data-stu-id="cfba7-173">int</span></span>                          | <span data-ttu-id="cfba7-174">System.Int32</span><span class="sxs-lookup"><span data-stu-id="cfba7-174">System.Int32</span></span>                                                        |
|<span data-ttu-id="cfba7-175">int16</span><span class="sxs-lookup"><span data-stu-id="cfba7-175">int16</span></span>                        | <span data-ttu-id="cfba7-176">System.Int16</span><span class="sxs-lookup"><span data-stu-id="cfba7-176">System.Int16</span></span>                                                        |
|<span data-ttu-id="cfba7-177">int32</span><span class="sxs-lookup"><span data-stu-id="cfba7-177">int32</span></span>                        | <span data-ttu-id="cfba7-178">System.Int32</span><span class="sxs-lookup"><span data-stu-id="cfba7-178">System.Int32</span></span>                                                        |
|<span data-ttu-id="cfba7-179">int64</span><span class="sxs-lookup"><span data-stu-id="cfba7-179">int64</span></span>                        | <span data-ttu-id="cfba7-180">System.Int64</span><span class="sxs-lookup"><span data-stu-id="cfba7-180">System.Int64</span></span>                                                        |
|<span data-ttu-id="cfba7-181">IP</span><span class="sxs-lookup"><span data-stu-id="cfba7-181">ipaddress</span></span>                    | <span data-ttu-id="cfba7-182">System .net. IPAddress</span><span class="sxs-lookup"><span data-stu-id="cfba7-182">System.Net.IPAddress</span></span>                                                |
|<span data-ttu-id="cfba7-183">IPEndpoint</span><span class="sxs-lookup"><span data-stu-id="cfba7-183">IPEndpoint</span></span>                   | <span data-ttu-id="cfba7-184">System .net. IPEndPoint</span><span class="sxs-lookup"><span data-stu-id="cfba7-184">System.Net.IPEndPoint</span></span>                                               |
|<span data-ttu-id="cfba7-185">long</span><span class="sxs-lookup"><span data-stu-id="cfba7-185">long</span></span>                         | <span data-ttu-id="cfba7-186">System.Int64</span><span class="sxs-lookup"><span data-stu-id="cfba7-186">System.Int64</span></span>                                                        |
|<span data-ttu-id="cfba7-187">MailAddress</span><span class="sxs-lookup"><span data-stu-id="cfba7-187">mailaddress</span></span>                  | <span data-ttu-id="cfba7-188">System .net. mail. MailAddress</span><span class="sxs-lookup"><span data-stu-id="cfba7-188">System.Net.Mail.MailAddress</span></span>                                         |
|<span data-ttu-id="cfba7-189">Valor nulo</span><span class="sxs-lookup"><span data-stu-id="cfba7-189">NullString</span></span>                   | <span data-ttu-id="cfba7-190">System. Management. Automation. Language. NullString</span><span class="sxs-lookup"><span data-stu-id="cfba7-190">System.Management.Automation.Language.NullString</span></span>                    |
|<span data-ttu-id="cfba7-191">ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="cfba7-191">ObjectSecurity</span></span>               | <span data-ttu-id="cfba7-192">System. Security. AccessControl. ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="cfba7-192">System.Security.AccessControl.ObjectSecurity</span></span>                        |
|<span data-ttu-id="cfba7-193">OutputType</span><span class="sxs-lookup"><span data-stu-id="cfba7-193">OutputType</span></span>                   | <span data-ttu-id="cfba7-194">System. Management. Automation. OutputTypeAttribute</span><span class="sxs-lookup"><span data-stu-id="cfba7-194">System.Management.Automation.OutputTypeAttribute</span></span>                    |
|<span data-ttu-id="cfba7-195">Parâmetro</span><span class="sxs-lookup"><span data-stu-id="cfba7-195">Parameter</span></span>                    | <span data-ttu-id="cfba7-196">System. Management. Automation. ParameterAttribute</span><span class="sxs-lookup"><span data-stu-id="cfba7-196">System.Management.Automation.ParameterAttribute</span></span>                     |
|<span data-ttu-id="cfba7-197">PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="cfba7-197">PhysicalAddress</span></span>              | <span data-ttu-id="cfba7-198">System .net. NetworkInformation. PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="cfba7-198">System.Net.NetworkInformation.PhysicalAddress</span></span>                       |
|<span data-ttu-id="cfba7-199">powershell</span><span class="sxs-lookup"><span data-stu-id="cfba7-199">powershell</span></span>                   | <span data-ttu-id="cfba7-200">System. Management. Automation. PowerShell</span><span class="sxs-lookup"><span data-stu-id="cfba7-200">System.Management.Automation.PowerShell</span></span>                             |
|<span data-ttu-id="cfba7-201">psaliasproperty</span><span class="sxs-lookup"><span data-stu-id="cfba7-201">psaliasproperty</span></span>              | <span data-ttu-id="cfba7-202">System. Management. Automation. PSAliasProperty</span><span class="sxs-lookup"><span data-stu-id="cfba7-202">System.Management.Automation.PSAliasProperty</span></span>                        |
|<span data-ttu-id="cfba7-203">pscredential</span><span class="sxs-lookup"><span data-stu-id="cfba7-203">pscredential</span></span>                 | <span data-ttu-id="cfba7-204">System. Management. Automation. PSCredential</span><span class="sxs-lookup"><span data-stu-id="cfba7-204">System.Management.Automation.PSCredential</span></span>                           |
|<span data-ttu-id="cfba7-205">pscustomobject</span><span class="sxs-lookup"><span data-stu-id="cfba7-205">pscustomobject</span></span>               | <span data-ttu-id="cfba7-206">System. Management. Automation. PSObject</span><span class="sxs-lookup"><span data-stu-id="cfba7-206">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="cfba7-207">PSDefaultValue</span><span class="sxs-lookup"><span data-stu-id="cfba7-207">PSDefaultValue</span></span>               | <span data-ttu-id="cfba7-208">System.Management.Automation.PSDefaultValueAttribute</span><span class="sxs-lookup"><span data-stu-id="cfba7-208">System.Management.Automation.PSDefaultValueAttribute</span></span>                |
|<span data-ttu-id="cfba7-209">pslistmodifier</span><span class="sxs-lookup"><span data-stu-id="cfba7-209">pslistmodifier</span></span>               | <span data-ttu-id="cfba7-210">System. Management. Automation. PSListModifier</span><span class="sxs-lookup"><span data-stu-id="cfba7-210">System.Management.Automation.PSListModifier</span></span>                         |
|<span data-ttu-id="cfba7-211">PSModuleInfo</span><span class="sxs-lookup"><span data-stu-id="cfba7-211">psmoduleinfo</span></span>                 | <span data-ttu-id="cfba7-212">System. Management. Automation. PSModuleInfo</span><span class="sxs-lookup"><span data-stu-id="cfba7-212">System.Management.Automation.PSModuleInfo</span></span>                           |
|<span data-ttu-id="cfba7-213">psnoteproperty</span><span class="sxs-lookup"><span data-stu-id="cfba7-213">psnoteproperty</span></span>               | <span data-ttu-id="cfba7-214">System. Management. Automation. PSNoteProperty</span><span class="sxs-lookup"><span data-stu-id="cfba7-214">System.Management.Automation.PSNoteProperty</span></span>                         |
|<span data-ttu-id="cfba7-215">PSObject</span><span class="sxs-lookup"><span data-stu-id="cfba7-215">psobject</span></span>                     | <span data-ttu-id="cfba7-216">System. Management. Automation. PSObject</span><span class="sxs-lookup"><span data-stu-id="cfba7-216">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="cfba7-217">psprimitivedictionary</span><span class="sxs-lookup"><span data-stu-id="cfba7-217">psprimitivedictionary</span></span>        | <span data-ttu-id="cfba7-218">System. Management. Automation. PSPrimitiveDictionary</span><span class="sxs-lookup"><span data-stu-id="cfba7-218">System.Management.Automation.PSPrimitiveDictionary</span></span>                  |
|<span data-ttu-id="cfba7-219">psscriptmethod</span><span class="sxs-lookup"><span data-stu-id="cfba7-219">psscriptmethod</span></span>               | <span data-ttu-id="cfba7-220">System. Management. Automation. PSScriptMethod</span><span class="sxs-lookup"><span data-stu-id="cfba7-220">System.Management.Automation.PSScriptMethod</span></span>                         |
|<span data-ttu-id="cfba7-221">psscriptproperty</span><span class="sxs-lookup"><span data-stu-id="cfba7-221">psscriptproperty</span></span>             | <span data-ttu-id="cfba7-222">System. Management. Automation. PSScriptProperty</span><span class="sxs-lookup"><span data-stu-id="cfba7-222">System.Management.Automation.PSScriptProperty</span></span>                       |
|<span data-ttu-id="cfba7-223">PSTypeNameAttribute</span><span class="sxs-lookup"><span data-stu-id="cfba7-223">PSTypeNameAttribute</span></span>          | <span data-ttu-id="cfba7-224">System. Management. Automation. PSTypeNameAttribute</span><span class="sxs-lookup"><span data-stu-id="cfba7-224">System.Management.Automation.PSTypeNameAttribute</span></span>                    |
|<span data-ttu-id="cfba7-225">PSVariable</span><span class="sxs-lookup"><span data-stu-id="cfba7-225">psvariable</span></span>                   | <span data-ttu-id="cfba7-226">System. Management. Automation. PSVariable</span><span class="sxs-lookup"><span data-stu-id="cfba7-226">System.Management.Automation.PSVariable</span></span>                             |
|<span data-ttu-id="cfba7-227">psvariableproperty</span><span class="sxs-lookup"><span data-stu-id="cfba7-227">psvariableproperty</span></span>           | <span data-ttu-id="cfba7-228">System. Management. Automation. PSVariableProperty</span><span class="sxs-lookup"><span data-stu-id="cfba7-228">System.Management.Automation.PSVariableProperty</span></span>                     |
|<span data-ttu-id="cfba7-229">ref</span><span class="sxs-lookup"><span data-stu-id="cfba7-229">ref</span></span>                          | <span data-ttu-id="cfba7-230">System. Management. Automation. PSReference</span><span class="sxs-lookup"><span data-stu-id="cfba7-230">System.Management.Automation.PSReference</span></span>                            |
|<span data-ttu-id="cfba7-231">regex</span><span class="sxs-lookup"><span data-stu-id="cfba7-231">regex</span></span>                        | <span data-ttu-id="cfba7-232">System.Text.RegularExpressions.Regex</span><span class="sxs-lookup"><span data-stu-id="cfba7-232">System.Text.RegularExpressions.Regex</span></span>                                |
|<span data-ttu-id="cfba7-233">runspace</span><span class="sxs-lookup"><span data-stu-id="cfba7-233">runspace</span></span>                     | <span data-ttu-id="cfba7-234">System. Management. Automation. Runspaces. runspace</span><span class="sxs-lookup"><span data-stu-id="cfba7-234">System.Management.Automation.Runspaces.Runspace</span></span>                     |
|<span data-ttu-id="cfba7-235">runspacefactory</span><span class="sxs-lookup"><span data-stu-id="cfba7-235">runspacefactory</span></span>              | <span data-ttu-id="cfba7-236">System. Management. Automation. Runspaces. RunspaceFactory</span><span class="sxs-lookup"><span data-stu-id="cfba7-236">System.Management.Automation.Runspaces.RunspaceFactory</span></span>              |
|<span data-ttu-id="cfba7-237">sbyte</span><span class="sxs-lookup"><span data-stu-id="cfba7-237">sbyte</span></span>                        | <span data-ttu-id="cfba7-238">System.SByte</span><span class="sxs-lookup"><span data-stu-id="cfba7-238">System.SByte</span></span>                                                        |
|<span data-ttu-id="cfba7-239">scriptblock</span><span class="sxs-lookup"><span data-stu-id="cfba7-239">scriptblock</span></span>                  | <span data-ttu-id="cfba7-240">System. Management. Automation. ScriptBlock</span><span class="sxs-lookup"><span data-stu-id="cfba7-240">System.Management.Automation.ScriptBlock</span></span>                            |
|<span data-ttu-id="cfba7-241">secureString</span><span class="sxs-lookup"><span data-stu-id="cfba7-241">securestring</span></span>                 | <span data-ttu-id="cfba7-242">System.Security.SecureString</span><span class="sxs-lookup"><span data-stu-id="cfba7-242">System.Security.SecureString</span></span>                                        |
|<span data-ttu-id="cfba7-243">único</span><span class="sxs-lookup"><span data-stu-id="cfba7-243">single</span></span>                       | <span data-ttu-id="cfba7-244">System.Single</span><span class="sxs-lookup"><span data-stu-id="cfba7-244">System.Single</span></span>                                                       |
|<span data-ttu-id="cfba7-245">string</span><span class="sxs-lookup"><span data-stu-id="cfba7-245">string</span></span>                       | <span data-ttu-id="cfba7-246">System.String</span><span class="sxs-lookup"><span data-stu-id="cfba7-246">System.String</span></span>                                                       |
|<span data-ttu-id="cfba7-247">SupportsWildcards</span><span class="sxs-lookup"><span data-stu-id="cfba7-247">SupportsWildcards</span></span>            | <span data-ttu-id="cfba7-248">System. Management. Automation. SupportsWildcardsAttribute</span><span class="sxs-lookup"><span data-stu-id="cfba7-248">System.Management.Automation.SupportsWildcardsAttribute</span></span>             |
|<span data-ttu-id="cfba7-249">switch</span><span class="sxs-lookup"><span data-stu-id="cfba7-249">switch</span></span>                       | <span data-ttu-id="cfba7-250">System.Management.Automation.SwitchParameter</span><span class="sxs-lookup"><span data-stu-id="cfba7-250">System.Management.Automation.SwitchParameter</span></span>                        |
|<span data-ttu-id="cfba7-251">TimeSpan</span><span class="sxs-lookup"><span data-stu-id="cfba7-251">timespan</span></span>                     | <span data-ttu-id="cfba7-252">System.TimeSpan</span><span class="sxs-lookup"><span data-stu-id="cfba7-252">System.TimeSpan</span></span>                                                     |
|<span data-ttu-id="cfba7-253">tipo</span><span class="sxs-lookup"><span data-stu-id="cfba7-253">type</span></span>                         | <span data-ttu-id="cfba7-254">System.Type</span><span class="sxs-lookup"><span data-stu-id="cfba7-254">System.Type</span></span>                                                         |
|<span data-ttu-id="cfba7-255">uint16</span><span class="sxs-lookup"><span data-stu-id="cfba7-255">uint16</span></span>                       | <span data-ttu-id="cfba7-256">System.UInt16</span><span class="sxs-lookup"><span data-stu-id="cfba7-256">System.UInt16</span></span>                                                       |
|<span data-ttu-id="cfba7-257">uint32</span><span class="sxs-lookup"><span data-stu-id="cfba7-257">uint32</span></span>                       | <span data-ttu-id="cfba7-258">System.UInt32</span><span class="sxs-lookup"><span data-stu-id="cfba7-258">System.UInt32</span></span>                                                       |
|<span data-ttu-id="cfba7-259">uint64</span><span class="sxs-lookup"><span data-stu-id="cfba7-259">uint64</span></span>                       | <span data-ttu-id="cfba7-260">System.UInt64</span><span class="sxs-lookup"><span data-stu-id="cfba7-260">System.UInt64</span></span>                                                       |
|<span data-ttu-id="cfba7-261">uri</span><span class="sxs-lookup"><span data-stu-id="cfba7-261">uri</span></span>                          | <span data-ttu-id="cfba7-262">System.Uri</span><span class="sxs-lookup"><span data-stu-id="cfba7-262">System.Uri</span></span>                                                          |
|<span data-ttu-id="cfba7-263">ValidateCount</span><span class="sxs-lookup"><span data-stu-id="cfba7-263">ValidateCount</span></span>                | <span data-ttu-id="cfba7-264">System. Management. Automation. ValidateCountAttribute</span><span class="sxs-lookup"><span data-stu-id="cfba7-264">System.Management.Automation.ValidateCountAttribute</span></span>                 |
|<span data-ttu-id="cfba7-265">ValidateDrive</span><span class="sxs-lookup"><span data-stu-id="cfba7-265">ValidateDrive</span></span>                | <span data-ttu-id="cfba7-266">System. Management. Automation. ValidateDriveAttribute</span><span class="sxs-lookup"><span data-stu-id="cfba7-266">System.Management.Automation.ValidateDriveAttribute</span></span>                 |
|<span data-ttu-id="cfba7-267">ValidateLength</span><span class="sxs-lookup"><span data-stu-id="cfba7-267">ValidateLength</span></span>               | <span data-ttu-id="cfba7-268">System. Management. Automation. ValidateLengthAttribute</span><span class="sxs-lookup"><span data-stu-id="cfba7-268">System.Management.Automation.ValidateLengthAttribute</span></span>                |
|<span data-ttu-id="cfba7-269">ValidateNotNull</span><span class="sxs-lookup"><span data-stu-id="cfba7-269">ValidateNotNull</span></span>              | <span data-ttu-id="cfba7-270">System. Management. Automation. ValidateNotNullAttribute</span><span class="sxs-lookup"><span data-stu-id="cfba7-270">System.Management.Automation.ValidateNotNullAttribute</span></span>               |
|<span data-ttu-id="cfba7-271">ValidateNotNullOrEmpty</span><span class="sxs-lookup"><span data-stu-id="cfba7-271">ValidateNotNullOrEmpty</span></span>       | <span data-ttu-id="cfba7-272">System. Management. Automation. ValidateNotNullOrEmptyAttribute</span><span class="sxs-lookup"><span data-stu-id="cfba7-272">System.Management.Automation.ValidateNotNullOrEmptyAttribute</span></span>        |
|<span data-ttu-id="cfba7-273">ValidatePattern</span><span class="sxs-lookup"><span data-stu-id="cfba7-273">ValidatePattern</span></span>              | <span data-ttu-id="cfba7-274">System. Management. Automation. ValidatePatternAttribute</span><span class="sxs-lookup"><span data-stu-id="cfba7-274">System.Management.Automation.ValidatePatternAttribute</span></span>               |
|<span data-ttu-id="cfba7-275">ValidateRange</span><span class="sxs-lookup"><span data-stu-id="cfba7-275">ValidateRange</span></span>                | <span data-ttu-id="cfba7-276">System. Management. Automation. ValidateRangeAttribute</span><span class="sxs-lookup"><span data-stu-id="cfba7-276">System.Management.Automation.ValidateRangeAttribute</span></span>                 |
|<span data-ttu-id="cfba7-277">ValidateScript</span><span class="sxs-lookup"><span data-stu-id="cfba7-277">ValidateScript</span></span>               | <span data-ttu-id="cfba7-278">System. Management. Automation. ValidateScriptAttribute</span><span class="sxs-lookup"><span data-stu-id="cfba7-278">System.Management.Automation.ValidateScriptAttribute</span></span>                |
|<span data-ttu-id="cfba7-279">ValidateSet</span><span class="sxs-lookup"><span data-stu-id="cfba7-279">ValidateSet</span></span>                  | <span data-ttu-id="cfba7-280">System. Management. Automation. ValidateSetAttribute</span><span class="sxs-lookup"><span data-stu-id="cfba7-280">System.Management.Automation.ValidateSetAttribute</span></span>                   |
|<span data-ttu-id="cfba7-281">ValidateTrustedData</span><span class="sxs-lookup"><span data-stu-id="cfba7-281">ValidateTrustedData</span></span>          | <span data-ttu-id="cfba7-282">System. Management. Automation. ValidateTrustedDataAttribute</span><span class="sxs-lookup"><span data-stu-id="cfba7-282">System.Management.Automation.ValidateTrustedDataAttribute</span></span>           |
|<span data-ttu-id="cfba7-283">ValidateUserDrive</span><span class="sxs-lookup"><span data-stu-id="cfba7-283">ValidateUserDrive</span></span>            | <span data-ttu-id="cfba7-284">System. Management. Automation. ValidateUserDriveAttribute</span><span class="sxs-lookup"><span data-stu-id="cfba7-284">System.Management.Automation.ValidateUserDriveAttribute</span></span>             |
|<span data-ttu-id="cfba7-285">version</span><span class="sxs-lookup"><span data-stu-id="cfba7-285">version</span></span>                      | <span data-ttu-id="cfba7-286">System.Version</span><span class="sxs-lookup"><span data-stu-id="cfba7-286">System.Version</span></span>                                                      |
|<span data-ttu-id="cfba7-287">void</span><span class="sxs-lookup"><span data-stu-id="cfba7-287">void</span></span>                         | <span data-ttu-id="cfba7-288">System.Void</span><span class="sxs-lookup"><span data-stu-id="cfba7-288">System.Void</span></span>                                                         |
|<span data-ttu-id="cfba7-289">WildcardPattern</span><span class="sxs-lookup"><span data-stu-id="cfba7-289">WildcardPattern</span></span>              | <span data-ttu-id="cfba7-290">System. Management. Automation. WildcardPattern</span><span class="sxs-lookup"><span data-stu-id="cfba7-290">System.Management.Automation.WildcardPattern</span></span>                        |
|<span data-ttu-id="cfba7-291">esses</span><span class="sxs-lookup"><span data-stu-id="cfba7-291">wmi</span></span>                          | <span data-ttu-id="cfba7-292">System. Management. ManagementObject</span><span class="sxs-lookup"><span data-stu-id="cfba7-292">System.Management.ManagementObject</span></span>                                  |
|<span data-ttu-id="cfba7-293">wmiclass</span><span class="sxs-lookup"><span data-stu-id="cfba7-293">wmiclass</span></span>                     | <span data-ttu-id="cfba7-294">System. Management. ManagementClass</span><span class="sxs-lookup"><span data-stu-id="cfba7-294">System.Management.ManagementClass</span></span>                                   |
|<span data-ttu-id="cfba7-295">wmisearcher</span><span class="sxs-lookup"><span data-stu-id="cfba7-295">wmisearcher</span></span>                  | <span data-ttu-id="cfba7-296">System. Management. ManagementObjectSearcher</span><span class="sxs-lookup"><span data-stu-id="cfba7-296">System.Management.ManagementObjectSearcher</span></span>                          |
|<span data-ttu-id="cfba7-297">X500DistinguishedName</span><span class="sxs-lookup"><span data-stu-id="cfba7-297">X500DistinguishedName</span></span>        | <span data-ttu-id="cfba7-298">System. Security. Cryptography. X509Certificates. X500DistinguishedName</span><span class="sxs-lookup"><span data-stu-id="cfba7-298">System.Security.Cryptography.X509Certificates.X500DistinguishedName</span></span> |
|<span data-ttu-id="cfba7-299">X509Certificate</span><span class="sxs-lookup"><span data-stu-id="cfba7-299">X509Certificate</span></span>              | <span data-ttu-id="cfba7-300">System. Security. Cryptography. X509Certificates. X509Certificate</span><span class="sxs-lookup"><span data-stu-id="cfba7-300">System.Security.Cryptography.X509Certificates.X509Certificate</span></span>       |
|<span data-ttu-id="cfba7-301">xml</span><span class="sxs-lookup"><span data-stu-id="cfba7-301">xml</span></span>                          | <span data-ttu-id="cfba7-302">System.Xml.XmlDocument</span><span class="sxs-lookup"><span data-stu-id="cfba7-302">System.Xml.XmlDocument</span></span>                                              |
