reference/7.0/Microsoft.PowerShell.Core/About/about_Type_Accelerators.md
---
description: Descreve os aceleradores de tipo disponíveis para classes do .NET Framework
keywords: powershell, cmdlet
Locale: en-US
ms.date: 05/01/2020
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.core/about/about_type_accelerators?view=powershell-7&WT.mc_id=ps-gethelp
schema: 2.0.0
title: about_Type_Accelerators
ms.openlocfilehash: 6f73aa590b64cda5739a2a118b2b4c5a6c103a67
ms.sourcegitcommit: f874dc1d4236e06a3df195d179f59e0a7d9f8436
ms.translationtype: MT
ms.contentlocale: pt-BR
ms.lasthandoff: 10/13/2020
ms.locfileid: "93195575"
---
# <a name="about-type-accelerators"></a><span data-ttu-id="f1f69-104">Sobre aceleradores de tipo</span><span class="sxs-lookup"><span data-stu-id="f1f69-104">About Type Accelerators</span></span>

## <a name="short-desription"></a><span data-ttu-id="f1f69-105">DESCRIÇÃO COMPLETA DO CURTO</span><span class="sxs-lookup"><span data-stu-id="f1f69-105">SHORT DESRIPTION</span></span>
<span data-ttu-id="f1f69-106">Descreve os aceleradores de tipo disponíveis para classes do .NET Framework</span><span class="sxs-lookup"><span data-stu-id="f1f69-106">Describes the Type accelerators available for .NET framework classes</span></span>

## <a name="long-description"></a><span data-ttu-id="f1f69-107">DESCRIÇÃO LONGA</span><span class="sxs-lookup"><span data-stu-id="f1f69-107">LONG DESCRIPTION</span></span>

<span data-ttu-id="f1f69-108">Os aceleradores de tipo são aliases para classes do .NET Framework.</span><span class="sxs-lookup"><span data-stu-id="f1f69-108">Type accelerators are aliases for .NET framework classes.</span></span> <span data-ttu-id="f1f69-109">Eles permitem que você acesse classes específicas do .NET Framework sem precisar digitar explicitamente o nome inteiro da classe.</span><span class="sxs-lookup"><span data-stu-id="f1f69-109">They allow you to access specific .NET framework classes without having to explicitly type the entire class name.</span></span> <span data-ttu-id="f1f69-110">Por exemplo, você pode encurtar a classe **AliasAttribute** de `[System.Management.Automation.AliasAttribute]` para `[Alias]` .</span><span class="sxs-lookup"><span data-stu-id="f1f69-110">For example, you can shorten the **AliasAttribute** class from `[System.Management.Automation.AliasAttribute]` to `[Alias]`.</span></span>

> [!NOTE]
> <span data-ttu-id="f1f69-111">Todos os aceleradores de tipo ainda precisam ser encapsulados entre colchetes ( `[]` ).</span><span class="sxs-lookup"><span data-stu-id="f1f69-111">All type accelerators still need to be wrapped in square brackets(`[]`).</span></span>

## <a name="available-type-accelerators"></a><span data-ttu-id="f1f69-112">Aceleradores de tipo disponíveis</span><span class="sxs-lookup"><span data-stu-id="f1f69-112">Available Type Accelerators</span></span>

|        <span data-ttu-id="f1f69-113">Acelerador</span><span class="sxs-lookup"><span data-stu-id="f1f69-113">Accelerator</span></span>          |                           <span data-ttu-id="f1f69-114">Nome Completo da Classe</span><span class="sxs-lookup"><span data-stu-id="f1f69-114">Full Class Name</span></span>                           |
|---------------------------- | ------------------------------------------------------------------- |
|<span data-ttu-id="f1f69-115">editor</span><span class="sxs-lookup"><span data-stu-id="f1f69-115">adsi</span></span>                         | <span data-ttu-id="f1f69-116">System. DirectoryServices. DirectoryEntry</span><span class="sxs-lookup"><span data-stu-id="f1f69-116">System.DirectoryServices.DirectoryEntry</span></span>                             |
|<span data-ttu-id="f1f69-117">adsisearcher</span><span class="sxs-lookup"><span data-stu-id="f1f69-117">adsisearcher</span></span>                 | <span data-ttu-id="f1f69-118">System. DirectoryServices. DirectorySearcher</span><span class="sxs-lookup"><span data-stu-id="f1f69-118">System.DirectoryServices.DirectorySearcher</span></span>                          |
|<span data-ttu-id="f1f69-119">Alias</span><span class="sxs-lookup"><span data-stu-id="f1f69-119">Alias</span></span>                        | <span data-ttu-id="f1f69-120">System. Management. Automation. AliasAttribute</span><span class="sxs-lookup"><span data-stu-id="f1f69-120">System.Management.Automation.AliasAttribute</span></span>                         |
|<span data-ttu-id="f1f69-121">AllowEmptyCollection</span><span class="sxs-lookup"><span data-stu-id="f1f69-121">AllowEmptyCollection</span></span>         | <span data-ttu-id="f1f69-122">System. Management. Automation. AllowEmptyCollectionAttribute</span><span class="sxs-lookup"><span data-stu-id="f1f69-122">System.Management.Automation.AllowEmptyCollectionAttribute</span></span>          |
|<span data-ttu-id="f1f69-123">AllowEmptyString</span><span class="sxs-lookup"><span data-stu-id="f1f69-123">AllowEmptyString</span></span>             | <span data-ttu-id="f1f69-124">System. Management. Automation. AllowEmptyStringAttribute</span><span class="sxs-lookup"><span data-stu-id="f1f69-124">System.Management.Automation.AllowEmptyStringAttribute</span></span>              |
|<span data-ttu-id="f1f69-125">AllowNull</span><span class="sxs-lookup"><span data-stu-id="f1f69-125">AllowNull</span></span>                    | <span data-ttu-id="f1f69-126">System. Management. Automation. AllowNullAttribute</span><span class="sxs-lookup"><span data-stu-id="f1f69-126">System.Management.Automation.AllowNullAttribute</span></span>                     |
|<span data-ttu-id="f1f69-127">ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="f1f69-127">ArgumentCompleter</span></span>            | <span data-ttu-id="f1f69-128">System. Management. Automation. ArgumentCompleterAttribute</span><span class="sxs-lookup"><span data-stu-id="f1f69-128">System.Management.Automation.ArgumentCompleterAttribute</span></span>             |
|<span data-ttu-id="f1f69-129">ArgumentCompletions</span><span class="sxs-lookup"><span data-stu-id="f1f69-129">ArgumentCompletions</span></span>          | <span data-ttu-id="f1f69-130">System. Management. Automation. ArgumentCompletionsAttribute</span><span class="sxs-lookup"><span data-stu-id="f1f69-130">System.Management.Automation.ArgumentCompletionsAttribute</span></span>           |
|<span data-ttu-id="f1f69-131">matriz</span><span class="sxs-lookup"><span data-stu-id="f1f69-131">array</span></span>                        | <span data-ttu-id="f1f69-132">System.Array</span><span class="sxs-lookup"><span data-stu-id="f1f69-132">System.Array</span></span>                                                        |
|<span data-ttu-id="f1f69-133">bigint</span><span class="sxs-lookup"><span data-stu-id="f1f69-133">bigint</span></span>                       | <span data-ttu-id="f1f69-134">System. Numerics. BigInteger</span><span class="sxs-lookup"><span data-stu-id="f1f69-134">System.Numerics.BigInteger</span></span>                                          |
|<span data-ttu-id="f1f69-135">bool</span><span class="sxs-lookup"><span data-stu-id="f1f69-135">bool</span></span>                         | <span data-ttu-id="f1f69-136">System.Boolean</span><span class="sxs-lookup"><span data-stu-id="f1f69-136">System.Boolean</span></span>                                                      |
|<span data-ttu-id="f1f69-137">byte</span><span class="sxs-lookup"><span data-stu-id="f1f69-137">byte</span></span>                         | <span data-ttu-id="f1f69-138">System.Byte</span><span class="sxs-lookup"><span data-stu-id="f1f69-138">System.Byte</span></span>                                                         |
|<span data-ttu-id="f1f69-139">char</span><span class="sxs-lookup"><span data-stu-id="f1f69-139">char</span></span>                         | <span data-ttu-id="f1f69-140">System.Char</span><span class="sxs-lookup"><span data-stu-id="f1f69-140">System.Char</span></span>                                                         |
|<span data-ttu-id="f1f69-141">cimclass</span><span class="sxs-lookup"><span data-stu-id="f1f69-141">cimclass</span></span>                     | <span data-ttu-id="f1f69-142">Microsoft. Management. Infrastructure. CimClass</span><span class="sxs-lookup"><span data-stu-id="f1f69-142">Microsoft.Management.Infrastructure.CimClass</span></span>                        |
|<span data-ttu-id="f1f69-143">cimconverter</span><span class="sxs-lookup"><span data-stu-id="f1f69-143">cimconverter</span></span>                 | <span data-ttu-id="f1f69-144">Microsoft. Management. Infrastructure. CimConverter</span><span class="sxs-lookup"><span data-stu-id="f1f69-144">Microsoft.Management.Infrastructure.CimConverter</span></span>                    |
|<span data-ttu-id="f1f69-145">ciminstance</span><span class="sxs-lookup"><span data-stu-id="f1f69-145">ciminstance</span></span>                  | <span data-ttu-id="f1f69-146">Microsoft. Management. Infrastructure. CimInstance</span><span class="sxs-lookup"><span data-stu-id="f1f69-146">Microsoft.Management.Infrastructure.CimInstance</span></span>                     |
|<span data-ttu-id="f1f69-147">CimSession</span><span class="sxs-lookup"><span data-stu-id="f1f69-147">CimSession</span></span>                   | <span data-ttu-id="f1f69-148">Microsoft.Management.Infrastructure.CimSession</span><span class="sxs-lookup"><span data-stu-id="f1f69-148">Microsoft.Management.Infrastructure.CimSession</span></span>                      |
|<span data-ttu-id="f1f69-149">CimType</span><span class="sxs-lookup"><span data-stu-id="f1f69-149">cimtype</span></span>                      | <span data-ttu-id="f1f69-150">Microsoft. Management. Infrastructure. CimType</span><span class="sxs-lookup"><span data-stu-id="f1f69-150">Microsoft.Management.Infrastructure.CimType</span></span>                         |
|<span data-ttu-id="f1f69-151">CmdletBinding</span><span class="sxs-lookup"><span data-stu-id="f1f69-151">CmdletBinding</span></span>                | <span data-ttu-id="f1f69-152">System. Management. Automation. CmdletBindingAttribute</span><span class="sxs-lookup"><span data-stu-id="f1f69-152">System.Management.Automation.CmdletBindingAttribute</span></span>                 |
|<span data-ttu-id="f1f69-153">CultureInfo</span><span class="sxs-lookup"><span data-stu-id="f1f69-153">cultureinfo</span></span>                  | <span data-ttu-id="f1f69-154">System. Globalization. CultureInfo</span><span class="sxs-lookup"><span data-stu-id="f1f69-154">System.Globalization.CultureInfo</span></span>                                    |
|<span data-ttu-id="f1f69-155">DATETIME</span><span class="sxs-lookup"><span data-stu-id="f1f69-155">datetime</span></span>                     | <span data-ttu-id="f1f69-156">System.DateTime</span><span class="sxs-lookup"><span data-stu-id="f1f69-156">System.DateTime</span></span>                                                     |
|<span data-ttu-id="f1f69-157">decimal</span><span class="sxs-lookup"><span data-stu-id="f1f69-157">decimal</span></span>                      | <span data-ttu-id="f1f69-158">System.Decimal</span><span class="sxs-lookup"><span data-stu-id="f1f69-158">System.Decimal</span></span>                                                      |
|<span data-ttu-id="f1f69-159">double</span><span class="sxs-lookup"><span data-stu-id="f1f69-159">double</span></span>                       | <span data-ttu-id="f1f69-160">System.Double</span><span class="sxs-lookup"><span data-stu-id="f1f69-160">System.Double</span></span>                                                       |
|<span data-ttu-id="f1f69-161">DscLocalConfigurationManager</span><span class="sxs-lookup"><span data-stu-id="f1f69-161">DscLocalConfigurationManager</span></span> | <span data-ttu-id="f1f69-162">System. Management. Automation. DscLocalConfigurationManagerAttribute</span><span class="sxs-lookup"><span data-stu-id="f1f69-162">System.Management.Automation.DscLocalConfigurationManagerAttribute</span></span>  |
|<span data-ttu-id="f1f69-163">DscProperty</span><span class="sxs-lookup"><span data-stu-id="f1f69-163">DscProperty</span></span>                  | <span data-ttu-id="f1f69-164">System. Management. Automation. DscPropertyAttribute</span><span class="sxs-lookup"><span data-stu-id="f1f69-164">System.Management.Automation.DscPropertyAttribute</span></span>                   |
|<span data-ttu-id="f1f69-165">DscResource</span><span class="sxs-lookup"><span data-stu-id="f1f69-165">DscResource</span></span>                  | <span data-ttu-id="f1f69-166">System. Management. Automation. DscResourceAttribute</span><span class="sxs-lookup"><span data-stu-id="f1f69-166">System.Management.Automation.DscResourceAttribute</span></span>                   |
|<span data-ttu-id="f1f69-167">Experimentoaction</span><span class="sxs-lookup"><span data-stu-id="f1f69-167">ExperimentAction</span></span>             | <span data-ttu-id="f1f69-168">System. Management. Automation. Experimentoaction</span><span class="sxs-lookup"><span data-stu-id="f1f69-168">System.Management.Automation.ExperimentAction</span></span>                       |
|<span data-ttu-id="f1f69-169">Habilitação</span><span class="sxs-lookup"><span data-stu-id="f1f69-169">Experimental</span></span>                 | <span data-ttu-id="f1f69-170">System. Management. Automation. ExperimentalAttribute</span><span class="sxs-lookup"><span data-stu-id="f1f69-170">System.Management.Automation.ExperimentalAttribute</span></span>                  |
|<span data-ttu-id="f1f69-171">ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="f1f69-171">ExperimentalFeature</span></span>          | <span data-ttu-id="f1f69-172">System. Management. Automation. ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="f1f69-172">System.Management.Automation.ExperimentalFeature</span></span>                    |
|<span data-ttu-id="f1f69-173">float</span><span class="sxs-lookup"><span data-stu-id="f1f69-173">float</span></span>                        | <span data-ttu-id="f1f69-174">System.Single</span><span class="sxs-lookup"><span data-stu-id="f1f69-174">System.Single</span></span>                                                       |
|<span data-ttu-id="f1f69-175">guid</span><span class="sxs-lookup"><span data-stu-id="f1f69-175">guid</span></span>                         | <span data-ttu-id="f1f69-176">System.Guid</span><span class="sxs-lookup"><span data-stu-id="f1f69-176">System.Guid</span></span>                                                         |
|<span data-ttu-id="f1f69-177">tabela</span><span class="sxs-lookup"><span data-stu-id="f1f69-177">hashtable</span></span>                    | <span data-ttu-id="f1f69-178">System.Collections.Hashtable</span><span class="sxs-lookup"><span data-stu-id="f1f69-178">System.Collections.Hashtable</span></span>                                        |
|<span data-ttu-id="f1f69-179">initialsessionstate</span><span class="sxs-lookup"><span data-stu-id="f1f69-179">initialsessionstate</span></span>          | <span data-ttu-id="f1f69-180">System.Management.Automation.Runspaces.InitialSessionState</span><span class="sxs-lookup"><span data-stu-id="f1f69-180">System.Management.Automation.Runspaces.InitialSessionState</span></span>          |
|<span data-ttu-id="f1f69-181">INT</span><span class="sxs-lookup"><span data-stu-id="f1f69-181">int</span></span>                          | <span data-ttu-id="f1f69-182">System.Int32</span><span class="sxs-lookup"><span data-stu-id="f1f69-182">System.Int32</span></span>                                                        |
|<span data-ttu-id="f1f69-183">int16</span><span class="sxs-lookup"><span data-stu-id="f1f69-183">int16</span></span>                        | <span data-ttu-id="f1f69-184">System.Int16</span><span class="sxs-lookup"><span data-stu-id="f1f69-184">System.Int16</span></span>                                                        |
|<span data-ttu-id="f1f69-185">int32</span><span class="sxs-lookup"><span data-stu-id="f1f69-185">int32</span></span>                        | <span data-ttu-id="f1f69-186">System.Int32</span><span class="sxs-lookup"><span data-stu-id="f1f69-186">System.Int32</span></span>                                                        |
|<span data-ttu-id="f1f69-187">int64</span><span class="sxs-lookup"><span data-stu-id="f1f69-187">int64</span></span>                        | <span data-ttu-id="f1f69-188">System.Int64</span><span class="sxs-lookup"><span data-stu-id="f1f69-188">System.Int64</span></span>                                                        |
|<span data-ttu-id="f1f69-189">IP</span><span class="sxs-lookup"><span data-stu-id="f1f69-189">ipaddress</span></span>                    | <span data-ttu-id="f1f69-190">System .net. IPAddress</span><span class="sxs-lookup"><span data-stu-id="f1f69-190">System.Net.IPAddress</span></span>                                                |
|<span data-ttu-id="f1f69-191">IPEndpoint</span><span class="sxs-lookup"><span data-stu-id="f1f69-191">IPEndpoint</span></span>                   | <span data-ttu-id="f1f69-192">System .net. IPEndPoint</span><span class="sxs-lookup"><span data-stu-id="f1f69-192">System.Net.IPEndPoint</span></span>                                               |
|<span data-ttu-id="f1f69-193">long</span><span class="sxs-lookup"><span data-stu-id="f1f69-193">long</span></span>                         | <span data-ttu-id="f1f69-194">System.Int64</span><span class="sxs-lookup"><span data-stu-id="f1f69-194">System.Int64</span></span>                                                        |
|<span data-ttu-id="f1f69-195">MailAddress</span><span class="sxs-lookup"><span data-stu-id="f1f69-195">mailaddress</span></span>                  | <span data-ttu-id="f1f69-196">System .net. mail. MailAddress</span><span class="sxs-lookup"><span data-stu-id="f1f69-196">System.Net.Mail.MailAddress</span></span>                                         |
|<span data-ttu-id="f1f69-197">Valor nulo</span><span class="sxs-lookup"><span data-stu-id="f1f69-197">NullString</span></span>                   | <span data-ttu-id="f1f69-198">System. Management. Automation. Language. NullString</span><span class="sxs-lookup"><span data-stu-id="f1f69-198">System.Management.Automation.Language.NullString</span></span>                    |
|<span data-ttu-id="f1f69-199">ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="f1f69-199">ObjectSecurity</span></span>               | <span data-ttu-id="f1f69-200">System. Security. AccessControl. ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="f1f69-200">System.Security.AccessControl.ObjectSecurity</span></span>                        |
|<span data-ttu-id="f1f69-201">OutputType</span><span class="sxs-lookup"><span data-stu-id="f1f69-201">OutputType</span></span>                   | <span data-ttu-id="f1f69-202">System. Management. Automation. OutputTypeAttribute</span><span class="sxs-lookup"><span data-stu-id="f1f69-202">System.Management.Automation.OutputTypeAttribute</span></span>                    |
|<span data-ttu-id="f1f69-203">Parâmetro</span><span class="sxs-lookup"><span data-stu-id="f1f69-203">Parameter</span></span>                    | <span data-ttu-id="f1f69-204">System. Management. Automation. ParameterAttribute</span><span class="sxs-lookup"><span data-stu-id="f1f69-204">System.Management.Automation.ParameterAttribute</span></span>                     |
|<span data-ttu-id="f1f69-205">PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="f1f69-205">PhysicalAddress</span></span>              | <span data-ttu-id="f1f69-206">System .net. NetworkInformation. PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="f1f69-206">System.Net.NetworkInformation.PhysicalAddress</span></span>                       |
|<span data-ttu-id="f1f69-207">powershell</span><span class="sxs-lookup"><span data-stu-id="f1f69-207">powershell</span></span>                   | <span data-ttu-id="f1f69-208">System. Management. Automation. PowerShell</span><span class="sxs-lookup"><span data-stu-id="f1f69-208">System.Management.Automation.PowerShell</span></span>                             |
|<span data-ttu-id="f1f69-209">psaliasproperty</span><span class="sxs-lookup"><span data-stu-id="f1f69-209">psaliasproperty</span></span>              | <span data-ttu-id="f1f69-210">System. Management. Automation. PSAliasProperty</span><span class="sxs-lookup"><span data-stu-id="f1f69-210">System.Management.Automation.PSAliasProperty</span></span>                        |
|<span data-ttu-id="f1f69-211">pscredential</span><span class="sxs-lookup"><span data-stu-id="f1f69-211">pscredential</span></span>                 | <span data-ttu-id="f1f69-212">System. Management. Automation. PSCredential</span><span class="sxs-lookup"><span data-stu-id="f1f69-212">System.Management.Automation.PSCredential</span></span>                           |
|<span data-ttu-id="f1f69-213">pscustomobject</span><span class="sxs-lookup"><span data-stu-id="f1f69-213">pscustomobject</span></span>               | <span data-ttu-id="f1f69-214">System. Management. Automation. PSObject</span><span class="sxs-lookup"><span data-stu-id="f1f69-214">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="f1f69-215">PSDefaultValue</span><span class="sxs-lookup"><span data-stu-id="f1f69-215">PSDefaultValue</span></span>               | <span data-ttu-id="f1f69-216">System.Management.Automation.PSDefaultValueAttribute</span><span class="sxs-lookup"><span data-stu-id="f1f69-216">System.Management.Automation.PSDefaultValueAttribute</span></span>                |
|<span data-ttu-id="f1f69-217">pslistmodifier</span><span class="sxs-lookup"><span data-stu-id="f1f69-217">pslistmodifier</span></span>               | <span data-ttu-id="f1f69-218">System. Management. Automation. PSListModifier</span><span class="sxs-lookup"><span data-stu-id="f1f69-218">System.Management.Automation.PSListModifier</span></span>                         |
|<span data-ttu-id="f1f69-219">PSModuleInfo</span><span class="sxs-lookup"><span data-stu-id="f1f69-219">psmoduleinfo</span></span>                 | <span data-ttu-id="f1f69-220">System. Management. Automation. PSModuleInfo</span><span class="sxs-lookup"><span data-stu-id="f1f69-220">System.Management.Automation.PSModuleInfo</span></span>                           |
|<span data-ttu-id="f1f69-221">psnoteproperty</span><span class="sxs-lookup"><span data-stu-id="f1f69-221">psnoteproperty</span></span>               | <span data-ttu-id="f1f69-222">System. Management. Automation. PSNoteProperty</span><span class="sxs-lookup"><span data-stu-id="f1f69-222">System.Management.Automation.PSNoteProperty</span></span>                         |
|<span data-ttu-id="f1f69-223">PSObject</span><span class="sxs-lookup"><span data-stu-id="f1f69-223">psobject</span></span>                     | <span data-ttu-id="f1f69-224">System. Management. Automation. PSObject</span><span class="sxs-lookup"><span data-stu-id="f1f69-224">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="f1f69-225">psprimitivedictionary</span><span class="sxs-lookup"><span data-stu-id="f1f69-225">psprimitivedictionary</span></span>        | <span data-ttu-id="f1f69-226">System. Management. Automation. PSPrimitiveDictionary</span><span class="sxs-lookup"><span data-stu-id="f1f69-226">System.Management.Automation.PSPrimitiveDictionary</span></span>                  |
|<span data-ttu-id="f1f69-227">pspropertyexpression</span><span class="sxs-lookup"><span data-stu-id="f1f69-227">pspropertyexpression</span></span>         | <span data-ttu-id="f1f69-228">Microsoft. PowerShell. Commands. PSPropertyExpression</span><span class="sxs-lookup"><span data-stu-id="f1f69-228">Microsoft.PowerShell.Commands.PSPropertyExpression</span></span>                  |
|<span data-ttu-id="f1f69-229">psscriptmethod</span><span class="sxs-lookup"><span data-stu-id="f1f69-229">psscriptmethod</span></span>               | <span data-ttu-id="f1f69-230">System. Management. Automation. PSScriptMethod</span><span class="sxs-lookup"><span data-stu-id="f1f69-230">System.Management.Automation.PSScriptMethod</span></span>                         |
|<span data-ttu-id="f1f69-231">psscriptproperty</span><span class="sxs-lookup"><span data-stu-id="f1f69-231">psscriptproperty</span></span>             | <span data-ttu-id="f1f69-232">System. Management. Automation. PSScriptProperty</span><span class="sxs-lookup"><span data-stu-id="f1f69-232">System.Management.Automation.PSScriptProperty</span></span>                       |
|<span data-ttu-id="f1f69-233">PSTypeNameAttribute</span><span class="sxs-lookup"><span data-stu-id="f1f69-233">PSTypeNameAttribute</span></span>          | <span data-ttu-id="f1f69-234">System. Management. Automation. PSTypeNameAttribute</span><span class="sxs-lookup"><span data-stu-id="f1f69-234">System.Management.Automation.PSTypeNameAttribute</span></span>                    |
|<span data-ttu-id="f1f69-235">PSVariable</span><span class="sxs-lookup"><span data-stu-id="f1f69-235">psvariable</span></span>                   | <span data-ttu-id="f1f69-236">System. Management. Automation. PSVariable</span><span class="sxs-lookup"><span data-stu-id="f1f69-236">System.Management.Automation.PSVariable</span></span>                             |
|<span data-ttu-id="f1f69-237">psvariableproperty</span><span class="sxs-lookup"><span data-stu-id="f1f69-237">psvariableproperty</span></span>           | <span data-ttu-id="f1f69-238">System. Management. Automation. PSVariableProperty</span><span class="sxs-lookup"><span data-stu-id="f1f69-238">System.Management.Automation.PSVariableProperty</span></span>                     |
|<span data-ttu-id="f1f69-239">ref</span><span class="sxs-lookup"><span data-stu-id="f1f69-239">ref</span></span>                          | <span data-ttu-id="f1f69-240">System. Management. Automation. PSReference</span><span class="sxs-lookup"><span data-stu-id="f1f69-240">System.Management.Automation.PSReference</span></span>                            |
|<span data-ttu-id="f1f69-241">regex</span><span class="sxs-lookup"><span data-stu-id="f1f69-241">regex</span></span>                        | <span data-ttu-id="f1f69-242">System.Text.RegularExpressions.Regex</span><span class="sxs-lookup"><span data-stu-id="f1f69-242">System.Text.RegularExpressions.Regex</span></span>                                |
|<span data-ttu-id="f1f69-243">runspace</span><span class="sxs-lookup"><span data-stu-id="f1f69-243">runspace</span></span>                     | <span data-ttu-id="f1f69-244">System. Management. Automation. Runspaces. runspace</span><span class="sxs-lookup"><span data-stu-id="f1f69-244">System.Management.Automation.Runspaces.Runspace</span></span>                     |
|<span data-ttu-id="f1f69-245">runspacefactory</span><span class="sxs-lookup"><span data-stu-id="f1f69-245">runspacefactory</span></span>              | <span data-ttu-id="f1f69-246">System. Management. Automation. Runspaces. RunspaceFactory</span><span class="sxs-lookup"><span data-stu-id="f1f69-246">System.Management.Automation.Runspaces.RunspaceFactory</span></span>              |
|<span data-ttu-id="f1f69-247">sbyte</span><span class="sxs-lookup"><span data-stu-id="f1f69-247">sbyte</span></span>                        | <span data-ttu-id="f1f69-248">System.SByte</span><span class="sxs-lookup"><span data-stu-id="f1f69-248">System.SByte</span></span>                                                        |
|<span data-ttu-id="f1f69-249">scriptblock</span><span class="sxs-lookup"><span data-stu-id="f1f69-249">scriptblock</span></span>                  | <span data-ttu-id="f1f69-250">System. Management. Automation. ScriptBlock</span><span class="sxs-lookup"><span data-stu-id="f1f69-250">System.Management.Automation.ScriptBlock</span></span>                            |
|<span data-ttu-id="f1f69-251">secureString</span><span class="sxs-lookup"><span data-stu-id="f1f69-251">securestring</span></span>                 | <span data-ttu-id="f1f69-252">System.Security.SecureString</span><span class="sxs-lookup"><span data-stu-id="f1f69-252">System.Security.SecureString</span></span>                                        |
|<span data-ttu-id="f1f69-253">semver</span><span class="sxs-lookup"><span data-stu-id="f1f69-253">semver</span></span>                       | <span data-ttu-id="f1f69-254">System. Management. Automation. SemanticVersion</span><span class="sxs-lookup"><span data-stu-id="f1f69-254">System.Management.Automation.SemanticVersion</span></span>                        |
|<span data-ttu-id="f1f69-255">short</span><span class="sxs-lookup"><span data-stu-id="f1f69-255">short</span></span>                        | <span data-ttu-id="f1f69-256">System.Int16</span><span class="sxs-lookup"><span data-stu-id="f1f69-256">System.Int16</span></span>                                                        |
|<span data-ttu-id="f1f69-257">único</span><span class="sxs-lookup"><span data-stu-id="f1f69-257">single</span></span>                       | <span data-ttu-id="f1f69-258">System.Single</span><span class="sxs-lookup"><span data-stu-id="f1f69-258">System.Single</span></span>                                                       |
|<span data-ttu-id="f1f69-259">string</span><span class="sxs-lookup"><span data-stu-id="f1f69-259">string</span></span>                       | <span data-ttu-id="f1f69-260">System.String</span><span class="sxs-lookup"><span data-stu-id="f1f69-260">System.String</span></span>                                                       |
|<span data-ttu-id="f1f69-261">SupportsWildcards</span><span class="sxs-lookup"><span data-stu-id="f1f69-261">SupportsWildcards</span></span>            | <span data-ttu-id="f1f69-262">System. Management. Automation. SupportsWildcardsAttribute</span><span class="sxs-lookup"><span data-stu-id="f1f69-262">System.Management.Automation.SupportsWildcardsAttribute</span></span>             |
|<span data-ttu-id="f1f69-263">switch</span><span class="sxs-lookup"><span data-stu-id="f1f69-263">switch</span></span>                       | <span data-ttu-id="f1f69-264">System.Management.Automation.SwitchParameter</span><span class="sxs-lookup"><span data-stu-id="f1f69-264">System.Management.Automation.SwitchParameter</span></span>                        |
|<span data-ttu-id="f1f69-265">TimeSpan</span><span class="sxs-lookup"><span data-stu-id="f1f69-265">timespan</span></span>                     | <span data-ttu-id="f1f69-266">System.TimeSpan</span><span class="sxs-lookup"><span data-stu-id="f1f69-266">System.TimeSpan</span></span>                                                     |
|<span data-ttu-id="f1f69-267">tipo</span><span class="sxs-lookup"><span data-stu-id="f1f69-267">type</span></span>                         | <span data-ttu-id="f1f69-268">System.Type</span><span class="sxs-lookup"><span data-stu-id="f1f69-268">System.Type</span></span>                                                         |
|<span data-ttu-id="f1f69-269">uint</span><span class="sxs-lookup"><span data-stu-id="f1f69-269">uint</span></span>                         | <span data-ttu-id="f1f69-270">System.UInt32</span><span class="sxs-lookup"><span data-stu-id="f1f69-270">System.UInt32</span></span>                                                       |
|<span data-ttu-id="f1f69-271">uint16</span><span class="sxs-lookup"><span data-stu-id="f1f69-271">uint16</span></span>                       | <span data-ttu-id="f1f69-272">System.UInt16</span><span class="sxs-lookup"><span data-stu-id="f1f69-272">System.UInt16</span></span>                                                       |
|<span data-ttu-id="f1f69-273">uint32</span><span class="sxs-lookup"><span data-stu-id="f1f69-273">uint32</span></span>                       | <span data-ttu-id="f1f69-274">System.UInt32</span><span class="sxs-lookup"><span data-stu-id="f1f69-274">System.UInt32</span></span>                                                       |
|<span data-ttu-id="f1f69-275">uint64</span><span class="sxs-lookup"><span data-stu-id="f1f69-275">uint64</span></span>                       | <span data-ttu-id="f1f69-276">System.UInt64</span><span class="sxs-lookup"><span data-stu-id="f1f69-276">System.UInt64</span></span>                                                       |
|<span data-ttu-id="f1f69-277">ulong</span><span class="sxs-lookup"><span data-stu-id="f1f69-277">ulong</span></span>                        | <span data-ttu-id="f1f69-278">System.UInt64</span><span class="sxs-lookup"><span data-stu-id="f1f69-278">System.UInt64</span></span>                                                       |
|<span data-ttu-id="f1f69-279">uri</span><span class="sxs-lookup"><span data-stu-id="f1f69-279">uri</span></span>                          | <span data-ttu-id="f1f69-280">System.Uri</span><span class="sxs-lookup"><span data-stu-id="f1f69-280">System.Uri</span></span>                                                          |
|<span data-ttu-id="f1f69-281">ushort</span><span class="sxs-lookup"><span data-stu-id="f1f69-281">ushort</span></span>                       | <span data-ttu-id="f1f69-282">System.UInt16</span><span class="sxs-lookup"><span data-stu-id="f1f69-282">System.UInt16</span></span>                                                       |
|<span data-ttu-id="f1f69-283">ValidateCount</span><span class="sxs-lookup"><span data-stu-id="f1f69-283">ValidateCount</span></span>                | <span data-ttu-id="f1f69-284">System. Management. Automation. ValidateCountAttribute</span><span class="sxs-lookup"><span data-stu-id="f1f69-284">System.Management.Automation.ValidateCountAttribute</span></span>                 |
|<span data-ttu-id="f1f69-285">ValidateDrive</span><span class="sxs-lookup"><span data-stu-id="f1f69-285">ValidateDrive</span></span>                | <span data-ttu-id="f1f69-286">System. Management. Automation. ValidateDriveAttribute</span><span class="sxs-lookup"><span data-stu-id="f1f69-286">System.Management.Automation.ValidateDriveAttribute</span></span>                 |
|<span data-ttu-id="f1f69-287">ValidateLength</span><span class="sxs-lookup"><span data-stu-id="f1f69-287">ValidateLength</span></span>               | <span data-ttu-id="f1f69-288">System. Management. Automation. ValidateLengthAttribute</span><span class="sxs-lookup"><span data-stu-id="f1f69-288">System.Management.Automation.ValidateLengthAttribute</span></span>                |
|<span data-ttu-id="f1f69-289">ValidateNotNull</span><span class="sxs-lookup"><span data-stu-id="f1f69-289">ValidateNotNull</span></span>              | <span data-ttu-id="f1f69-290">System. Management. Automation. ValidateNotNullAttribute</span><span class="sxs-lookup"><span data-stu-id="f1f69-290">System.Management.Automation.ValidateNotNullAttribute</span></span>               |
|<span data-ttu-id="f1f69-291">ValidateNotNullOrEmpty</span><span class="sxs-lookup"><span data-stu-id="f1f69-291">ValidateNotNullOrEmpty</span></span>       | <span data-ttu-id="f1f69-292">System. Management. Automation. ValidateNotNullOrEmptyAttribute</span><span class="sxs-lookup"><span data-stu-id="f1f69-292">System.Management.Automation.ValidateNotNullOrEmptyAttribute</span></span>        |
|<span data-ttu-id="f1f69-293">ValidatePattern</span><span class="sxs-lookup"><span data-stu-id="f1f69-293">ValidatePattern</span></span>              | <span data-ttu-id="f1f69-294">System. Management. Automation. ValidatePatternAttribute</span><span class="sxs-lookup"><span data-stu-id="f1f69-294">System.Management.Automation.ValidatePatternAttribute</span></span>               |
|<span data-ttu-id="f1f69-295">ValidateRange</span><span class="sxs-lookup"><span data-stu-id="f1f69-295">ValidateRange</span></span>                | <span data-ttu-id="f1f69-296">System. Management. Automation. ValidateRangeAttribute</span><span class="sxs-lookup"><span data-stu-id="f1f69-296">System.Management.Automation.ValidateRangeAttribute</span></span>                 |
|<span data-ttu-id="f1f69-297">ValidateScript</span><span class="sxs-lookup"><span data-stu-id="f1f69-297">ValidateScript</span></span>               | <span data-ttu-id="f1f69-298">System. Management. Automation. ValidateScriptAttribute</span><span class="sxs-lookup"><span data-stu-id="f1f69-298">System.Management.Automation.ValidateScriptAttribute</span></span>                |
|<span data-ttu-id="f1f69-299">ValidateSet</span><span class="sxs-lookup"><span data-stu-id="f1f69-299">ValidateSet</span></span>                  | <span data-ttu-id="f1f69-300">System. Management. Automation. ValidateSetAttribute</span><span class="sxs-lookup"><span data-stu-id="f1f69-300">System.Management.Automation.ValidateSetAttribute</span></span>                   |
|<span data-ttu-id="f1f69-301">ValidateTrustedData</span><span class="sxs-lookup"><span data-stu-id="f1f69-301">ValidateTrustedData</span></span>          | <span data-ttu-id="f1f69-302">System. Management. Automation. ValidateTrustedDataAttribute</span><span class="sxs-lookup"><span data-stu-id="f1f69-302">System.Management.Automation.ValidateTrustedDataAttribute</span></span>           |
|<span data-ttu-id="f1f69-303">ValidateUserDrive</span><span class="sxs-lookup"><span data-stu-id="f1f69-303">ValidateUserDrive</span></span>            | <span data-ttu-id="f1f69-304">System. Management. Automation. ValidateUserDriveAttribute</span><span class="sxs-lookup"><span data-stu-id="f1f69-304">System.Management.Automation.ValidateUserDriveAttribute</span></span>             |
|<span data-ttu-id="f1f69-305">version</span><span class="sxs-lookup"><span data-stu-id="f1f69-305">version</span></span>                      | <span data-ttu-id="f1f69-306">System.Version</span><span class="sxs-lookup"><span data-stu-id="f1f69-306">System.Version</span></span>                                                      |
|<span data-ttu-id="f1f69-307">void</span><span class="sxs-lookup"><span data-stu-id="f1f69-307">void</span></span>                         | <span data-ttu-id="f1f69-308">System.Void</span><span class="sxs-lookup"><span data-stu-id="f1f69-308">System.Void</span></span>                                                         |
|<span data-ttu-id="f1f69-309">WildcardPattern</span><span class="sxs-lookup"><span data-stu-id="f1f69-309">WildcardPattern</span></span>              | <span data-ttu-id="f1f69-310">System. Management. Automation. WildcardPattern</span><span class="sxs-lookup"><span data-stu-id="f1f69-310">System.Management.Automation.WildcardPattern</span></span>                        |
|<span data-ttu-id="f1f69-311">esses</span><span class="sxs-lookup"><span data-stu-id="f1f69-311">wmi</span></span>                          | <span data-ttu-id="f1f69-312">System. Management. ManagementObject</span><span class="sxs-lookup"><span data-stu-id="f1f69-312">System.Management.ManagementObject</span></span>                                  |
|<span data-ttu-id="f1f69-313">wmiclass</span><span class="sxs-lookup"><span data-stu-id="f1f69-313">wmiclass</span></span>                     | <span data-ttu-id="f1f69-314">System. Management. ManagementClass</span><span class="sxs-lookup"><span data-stu-id="f1f69-314">System.Management.ManagementClass</span></span>                                   |
|<span data-ttu-id="f1f69-315">wmisearcher</span><span class="sxs-lookup"><span data-stu-id="f1f69-315">wmisearcher</span></span>                  | <span data-ttu-id="f1f69-316">System. Management. ManagementObjectSearcher</span><span class="sxs-lookup"><span data-stu-id="f1f69-316">System.Management.ManagementObjectSearcher</span></span>                          |
|<span data-ttu-id="f1f69-317">X500DistinguishedName</span><span class="sxs-lookup"><span data-stu-id="f1f69-317">X500DistinguishedName</span></span>        | <span data-ttu-id="f1f69-318">System. Security. Cryptography. X509Certificates. X500DistinguishedName</span><span class="sxs-lookup"><span data-stu-id="f1f69-318">System.Security.Cryptography.X509Certificates.X500DistinguishedName</span></span> |
|<span data-ttu-id="f1f69-319">X509Certificate</span><span class="sxs-lookup"><span data-stu-id="f1f69-319">X509Certificate</span></span>              | <span data-ttu-id="f1f69-320">System. Security. Cryptography. X509Certificates. X509Certificate</span><span class="sxs-lookup"><span data-stu-id="f1f69-320">System.Security.Cryptography.X509Certificates.X509Certificate</span></span>       |
|<span data-ttu-id="f1f69-321">xml</span><span class="sxs-lookup"><span data-stu-id="f1f69-321">xml</span></span>                          | <span data-ttu-id="f1f69-322">System.Xml.XmlDocument</span><span class="sxs-lookup"><span data-stu-id="f1f69-322">System.Xml.XmlDocument</span></span>                                              |
